--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
   <main>
     <section id="about" >
       <section id="about" style="padding: 0 40px;"></section>
-      
-      <h1>Hi, I am <span>Ajay Sharma</span></h1>
+       <img src="assets\ProfilPic\ajay.png.png" alt="Profile Picture" class="profile-pic">
+       <h1>Hi, I am</h1>
+       <h1 class="name-highlight">Ajay Sharma</h1>
       <h2>I am a <span class="typing-text" style="color: #a855f7;"></span></h2>
-      <img src="assets\ProfilPic\ajay.png.png" alt="Profile Picture" class="profile-pic">
+     
       <p>
         Enthusiastic BCA student with a strong <br>
         passion for technology and management, <br>
